Revision history for Perl extension CGI::Cache.

[Should really use Tie::Restore]

1.41 Mon May 24 08:49:05 EDT 2004
- Fixed an incompatibility with modules like CGI::Carp that override
  CORE::GLOBALS::die, a new feature since about perl 5.6.1 (thanks to David
  Link <dvlink@yahoo.com> for the bug report)
- Fixed uninitialized variable warnings (patch by Isaac Miller
  <isaac@soundscan.com>)
- Fixed documentation typo (patch by Isaac Miller <isaac@soundscan.com>)

1.40 Tue Nov  5 12:31:17 EST 2002
- Added clear() function to clear the cache. (Suggested by Adolfo Santiago
  <chago@anothernet.com>)

1.30 Thu Sep 26 13:01:32 EDT 2002
- Added enable_output feature. (Feature request from Theo Petersen
  <theo@summitdesign.net>.)
- Verified SpeedyCGI compatibility. (Impetus from Theo Petersen
  <theo@summitdesign.net>.)
- Added a new section on use in persistent environments. (Impetus from Theo
  Petersen <theo@summitdesign.net>.)
- Corrected tie, tied, and untie syntax--apparently not a bug, although it
  should have been. (Thanks to Benjamin Goldberg <goldbb2@earthlink.net> for
  the suggestion.)

1.21 Mon Feb 11 16:37:40 EST 2002
- Fixed a documentation bug in the synopsis. (Thanks to Ken
  <mitch@monger.net> for the report.)
- Added a long-overdue credit to Terrance Brannon <princepawn@yahoo.com> in
  the authors section of the POD. He had donated me the use of the CGI::Cache
  namespace, and kindly allowed the current codebase to replace his.

1.20 Fri Oct 19 11:51:19 EDT 2001
- Added a FORCE_INSTALL option to Makefile.PL to skip warnings about
  possibly incompatible versions.
- Many thanks to Benjamin Goldberg <goldbb2@earthlink.net> for helping to
  fix the tie'ing of STDOUT so that it works well with FastCGI. CGI::Cache
  is now fully compatible with FastCGI and mod_perl, and no extra work needs
  to be done on the part of the user. Thanks also to Pao-Hsi Huang
  <doggy8088@mail2000.com.tw> for raising the issue.